# Batch-Command-Parser

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: Iblock.h  Icommand.h  Igenerate_block.h  Igenerate_command.h  Ilogger.h  Inetwork_adapter.h  Ireader.h  Istd_writer.h  Iwriter.h  block.h  block_dynamic.h  block_static.h  command.h  file_logger.h  generate_block_static.h  generate_command.h  network_adapter.h  parser.h  sparse_infinite_matrix.h  std_reader.h  std_writer.h
src/: block.cpp  block_dynamic.cpp  block_static.cpp  command.cpp  file_logger.cpp  generate_block_static.cpp  generate_command.cpp  main.cpp  network_adapter.cpp  parser.cpp  std_reader.cpp  std_writer.cpp
